@@ -30,7 +30,7 @@
  <property name="H456_border_style">none</property>
  <property
     name="P_font">100% Arial,  sans-serif, Verdana, Helvetica</property>
- <property name="SMALL_font">11px</property>  
+ <property name="SMALL_font">11px Arial, Verdana, Helvetica, sans-serif</property>  
  <property name="STRONG_font"></property>
  <property name="P_padding">5px 10px 0px 0px</property>
  <property name="A_link_decoration">none</property>
