@@ -55,6 +55,12 @@ class TestSimple(CPSTestCase):
             css_content = self.portal[css_name](self.portal)
             self.assertValidCss(css_content, css_name)
 
+        # Testing the CSS page generated by CPSSkins with the theme config
+        view_id = 'renderCSS'
+        method = getattr(self.portal.portal_themes.default, view_id)
+        rendering = method()
+        self.assertValidCss(rendering, view_id)
+
 
     def testAnonymousSkins(self):
         view_ids = ('index_html', 'login_form', 'join_form', 'accessibility',
@@ -63,11 +69,11 @@ class TestSimple(CPSTestCase):
                     )
         for view_id in view_ids:
             method = getattr(self.portal, view_id)
-            render = method()
-            self.assertValidXHTML(render, view_id)
+            rendering = method()
+            self.assertValidXHTML(rendering, view_id)
             # Testing the CSS pages referenced from a web page along with
             # the inlined CSS property contained in the web page itself.
-            self.assertValidCss(render, view_id, input_format='html')
+            self.assertValidCss(rendering, view_id, input_format='html')
 
 
 class TestSimpleAsRoot(TestSimple):
@@ -95,12 +101,12 @@ class TestSimpleAsRoot(TestSimple):
             folder = getattr(self.portal, folder_id)
             for view_id in view_ids:
                 method = getattr(folder, view_id)
-                render = method()
+                rendering = method()
                 ressource_name = "%s/%s" % (folder_id, view_id)
-                self.assertValidXHTML(render, ressource_name)
+                self.assertValidXHTML(rendering, ressource_name)
                 # Testing the CSS pages referenced from a web page along with
                 # the inlined CSS property contained in the web page itself.
-                self.assertValidCss(render, ressource_name)
+                self.assertValidCss(rendering, ressource_name)
 
     def testLocalRoles(self):
         # Change local roles using the skin scripts
@@ -167,8 +173,8 @@ class TestSimpleAsAnonymous(TestSimple):
 
 def test_suite():
     suite = unittest.TestSuite()
-    suite.addTest(unittest.makeSuite(TestSimpleAsRoot))
     suite.addTest(unittest.makeSuite(TestSimpleAsAnonymous))
+    suite.addTest(unittest.makeSuite(TestSimpleAsRoot))
     return suite
 
 if __name__ == '__main__':
