@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Added a unit test to check the validity of the CSS generated by CPSSkins.
+- Fixed the validity of the CSS generated by the CPSDefault default theme.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
